StrictEq should not care about masqueradesAsUndefinedWatchpoint https://bugs.webkit.org/show_bug.cgi?id=215743

Reviewed by Yusuke Suzuki.

This patch removes masqueradesAsUndefinedWatchpoint handling for StrictEq
from fixupCompareStrictEqAndSameValue(), aligning it with SameValue.

According to the spec [1], only a few language constructs special-case
[[IsHTMLDDA]] objects: ToBoolean, abstract equality, and `typeof`.

No behavior change.

[1]: https://tc39.es/ecma262/#sec-IsHTMLDDA-internal-slot

* dfg/DFGFixupPhase.cpp:
(JSC::DFG::FixupPhase::fixupCompareStrictEqAndSameValue):


Canonical link: https://commits.webkit.org/228499@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266022 268f45cc-cd09-0410-ab3c-d52691b4dbfc